[tool.poetry]
name = "cibook-python"
version = "0.1.0"
description = ""
authors = ["takumiw"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
jupyterlab = "^3.2.8"
numpy = "^1.22.2"
pandas = "^1.4.0"
scipy = "^1.7.3"
statsmodels = "^0.13.1"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
rdata = "^0.6"
lxml = "^4.7.1"
lightgbm = "^3.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
